--- a/.env
+++ b/.env
@@ -12,17 +12,17 @@ APPWRITE_TRANSACTION_COLLECTION_ID = 66ee7dd4001cde8903dd
 
 
 #PLAID
-PLAID_CLIENT_ID=
-PLAID_SECRET=
-PLAID_ENV=
-PLAID_PRODUCTS=
-PLAID_COUNTRY_CODES=
+PLAID_CLIENT_ID=66f0052b024339001a04e496
+PLAID_SECRET=a1436d2dc4c1608d28de4dd62a2c0b
+PLAID_ENV=sandbox
+PLAID_PRODUCTS=auth,transactions,identity 
+PLAID_COUNTRY_CODES= US,GB,ES,NL,FR, IE, CA, DE, IT, PL, DK, NO, SE, EE, LT, LV, PT, BE
 
 #DWOLLA
-DWOLLA_KEY=
-DWOLLA_SECRET=
-DWOLLA_BASE_URL=
-DWOLLA_ENV=
+DWOLLA_KEY= UEvewrbZKouk76A01J6lEyjtpi7eMkZYmyS66Ana8Xsg7xVrA1
+DWOLLA_SECRET= wWSVA5VR4VYin0NJsJuREYIO3kcmRcmGuZujqjS988CKCQcp24
+DWOLLA_BASE_URL=https://api-sandbox.dwolla.com
+DWOLLA_ENV=sandbox
 
 
 
